# intelforge

./: (Strategic Intelligence Gathering).md  .coveragerc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARC_A_TECHNICAL_ARCHIVE_20250714_v1_CL.md  CLAUDE.md  CURRENT_IMPLEMENTATION_PLAN.md  DEPENDENCY_ANALYSIS_SUMMARY.md  DEPLOYMENT_LOG.md  IMP_A_IMPLEMENTATION_GUIDE_20250714_v1_CL.md  IMP_A_PRE_DEPLOYMENT_IMPLEMENTATION_PLAN_20250715_v1_CL.md  INTELFORGE_COMPLETE_FEATURES_GUIDE.md  INTELFORGE_SYSTEM_STATUS.md  INTELFORGE_USER_GUIDE.md  Implementation Plan for IntelForge Tasks.md  Intelligent OrgPlan Generator.md  ORGANIZATION_INDEX.md  PART3_PERSONA_TESTING_SUMMARY.md  PERFORMANCE_IMPROVEMENT_PLAN.md  PERFORMANCE_RESULTS_PYTHON310.md  PRE_DEPLOYMENT_FINISHING_TOUCHES.md  PRODUCTION_DEPLOYMENT_PLAN.md  PYTHON_310_DOWNGRADE_PLAN.md  README (4).md  README.md  README_SCRAPING.md  REF_A_INDIA_SEMANTIC_SERVICES_20250717_v1_CL.md  REF_A_LONGTERM_STRATEGY_CONSOLIDATION_20250717_v1_CL.md  REF_A_NAMING_CONVENTION_SUMMARY_20250714_v1_CL.md  REF_A_TRADING_SOURCES_COMPLETE_20250717_v1_CL.md  RELEASE_CHECKLIST.md  REORGANIZATION_SUMMARY.md  RUST_TOOLS_STATUS.md  SEMANTIC_CRAWLER_IMPLEMENTATION_REPORT.md  STS_A_PROJECT_CURRENT_STATE_20250714_v1_CL.md  TOOLS_REPLACEMENT_PLAN.md  USAGE_GUIDE.md  current_task.md  data_integrity_report.md  (+45 more)
.claude/: CLAUDE.md  PHILOSOPHY_ENFORCEMENT_SYSTEM.md  PHILOSOPHY_REMINDER_FOR_USER.md  dependencies.json  development_guidance.json  project_context.json  settings.json  settings.json.backup  tech_stack.json  testing_guidance.json
.codex/: config.json
.github/: pull_request_template.md
Repo_for_scraping/: GitHub Web Scraping Codebases_.md  consolidated_repository_list.md  deep research chatgpt scraping repo.md  downgrade plan with faster tools.md  production_scraping_frameworks_analysis.md  python downgrade in ubuntu.md  rust based testing tools.md
analysis/: dynamic_content_js_handling_repositories_analysis.md
chroma_storage/: chroma.sqlite3
ci/: .bandit  (+3 more)
(+1171 files in other folders)
